nashorn/test/script/basic/NASHORN-623.js.EXPECTED
SyntaxError: Invalid JSON: <json>:1:12 Expected number but found ident
{ "test" : -xxx }
            ^
